Added Request crypto section